// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unloadVideoOnPaused unloadVideoOnPaused prop does not restore previous time when restartOnPaused is true 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="display: block; width: 100%; object-fit: cover;"
    />
  </div>
</div>
`;

exports[`unloadVideoOnPaused unloadVideoOnPaused prop unloads the video's sources while it is paused when set to true 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="display: block; width: 100%; object-fit: cover;"
    />
  </div>
</div>
`;

exports[`unloadVideoOnPaused unloaded video is able to play immediately if focused prop is initially set to true 1`] = `
<div>
  <div
    data-testid="hover-video-player-container"
    style="position: relative;"
  >
    <video
      crossorigin="anonymous"
      data-testid="video-element"
      loop=""
      playsinline=""
      style="display: block; width: 100%; object-fit: cover;"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;
